[gd_scene load_steps=2 format=3 uid="uid://g6h9i2j5k8nop"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="PlayerHP" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 40.0
value = 100.0
show_percentage = false

[node name="PlayerHPLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 45.0
offset_right = 220.0
offset_bottom = 68.0
text = "PLAYER"

[node name="BossHP" type="ProgressBar" parent="."]
offset_left = 660.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 50.0
value = 100.0
show_percentage = false

[node name="BossHPLabel" type="Label" parent="."]
offset_left = 860.0
offset_top = 55.0
offset_right = 1060.0
offset_bottom = 78.0
text = "BOSS"
horizontal_alignment = 1

[node name="StageLabel" type="Label" parent="."]
offset_left = 560.0
offset_top = 20.0
offset_right = 720.0
offset_bottom = 50.0
text = "STAGE 1"
horizontal_alignment = 1

[node name="ArrowCount" type="Label" parent="."]
offset_left = 20.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 103.0
text = "Arrows: 5/5"

[node name="ActionBar" type="HBoxContainer" parent="."]
offset_left = 660.0
offset_top = 1000.0
offset_right = 1260.0
offset_bottom = 1070.0
theme_override_constants/separation = 20

[node name="SwordAction" type="VBoxContainer" parent="ActionBar"]
custom_minimum_size = Vector2(120, 70)

[node name="Label" type="Label" parent="ActionBar/SwordAction"]
layout_mode = 2
text = "剣 [J]"
horizontal_alignment = 1

[node name="Cooldown" type="ProgressBar" parent="ActionBar/SwordAction"]
layout_mode = 2
max_value = 1.0
value = 1.0
show_percentage = false

[node name="BowAction" type="VBoxContainer" parent="ActionBar"]
custom_minimum_size = Vector2(120, 70)

[node name="Label" type="Label" parent="ActionBar/BowAction"]
layout_mode = 2
text = "弓 [K]"
horizontal_alignment = 1

[node name="Cooldown" type="ProgressBar" parent="ActionBar/BowAction"]
layout_mode = 2
max_value = 5.0
value = 5.0
show_percentage = false

[node name="DashAction" type="VBoxContainer" parent="ActionBar"]
custom_minimum_size = Vector2(120, 70)

[node name="Label" type="Label" parent="ActionBar/DashAction"]
layout_mode = 2
text = "ダッシュ [Shift]"
horizontal_alignment = 1

[node name="Cooldown" type="ProgressBar" parent="ActionBar/DashAction"]
layout_mode = 2
max_value = 1.0
value = 1.0
show_percentage = false

[node name="RollAction" type="VBoxContainer" parent="ActionBar"]
custom_minimum_size = Vector2(120, 70)

[node name="Label" type="Label" parent="ActionBar/RollAction"]
layout_mode = 2
text = "回避 [Space]"
horizontal_alignment = 1

[node name="Cooldown" type="ProgressBar" parent="ActionBar/RollAction"]
layout_mode = 2
max_value = 1.0
value = 1.0
show_percentage = false
